@@ -6,6 +6,7 @@
 	  by configure).
 	- Fix trayicon on windows high DPI settings to look better.
 	- silence connect() http errors, unless verbosity 2.
+	- stop other download if one succeeds (happy eyeballs) on selfupdate.
 
 13 March 2012: Wouter
 	- self update work.
